--- a/src/my-app.html
+++ b/src/my-app.html
@@ -238,10 +238,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                     <page-ring name="ring" id={{pageId}}></page-ring>
                     <page-orders name="orders"></page-orders>
                     <page-order name="order" id={{pageId}}></page-order>
-                    <page-fills name="fills" id={{pageId}}></page-fills>
+                    <page-fills name="fills" market={{pageId}}></page-fills>
                     <page-convert name="convert" id={{pageId}}></page-convert>
                     <page-authorize name="authorize" id={{pageId}}></page-authorize>
-                    <page-transfer name="transfer"></page-transfer>
+                    <page-transfer name="transfer" token={{pageId}}></page-transfer>
                     <page-settings name="settings"></page-settings>
                     <page-doc name="doc" markdown={{pageId}}></page-doc>
                     <page-dev name="dev"></page-dev>
