--- a/src/page-convert.html
+++ b/src/page-convert.html
@@ -138,7 +138,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                             </paper-input>
                         </div>
                         <div class="buttonLine">
-                            <paper-button raised on-click="signToSend">Generate Transaction</paper-button>
+                            <paper-button primary raised on-click="signToSend">Generate Transaction</paper-button>
                         </div>
                     </div>
                 </paper-card>
