authorize page button css

--- a/src/page-authorize.html
+++ b/src/page-authorize.html
@@ -60,7 +60,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                       <vaadin-combo-box id="tokensSelector" items="[[_toTokenNameArray(appConfig.tokens)]]" item-label-path="name" item-value-path="address"></vaadin-combo-box>
                     </div>
                     <div class="horizontal layout center-justified button">
-                      <paper-button raised on-click="_signToSend">Generate Transaction</paper-button>
+                      <paper-button primary raised on-click="_signToSend">Generate Transaction</paper-button>
                     </div>
                   </div>
                 </div>
