--- a/src/page-fills.html
+++ b/src/page-fills.html
@@ -21,7 +21,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <simple-toolbar slot="secondary-toolbar" title="Fills" back-link="#/markets"></simple-toolbar>
             <div class="sections">
                 <paper-card>
-                    <recent-fills hash-title="Ring Hash" market="[[market]]"></recent-fills>
+                    <recent-fills hash-type="Ring" market="[[market]]"></recent-fills>
                 </paper-card>
                 <div class="footer-spacer"></div>
                 <looper-footer></looper-footer>
