--- a/src/page-ring.html
+++ b/src/page-ring.html
@@ -85,7 +85,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 <paper-card transparent>Recent Fills</paper-card>
                 <paper-card>
                     <div class="card-content">
-                        <recent-fills hash-title="Order Hash" market="[[id]]"></recent-fills>
+                        <recent-fills hash-type="order" market="[[id]]"></recent-fills>
                     </div>
                 </paper-card>
                 <div class="footer-spacer"></div>
