--- a/src/page-order.html
+++ b/src/page-order.html
@@ -62,7 +62,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 </paper-card>
                 <paper-card transparent>Historial Fills</paper-card>
                 <paper-card>
-                    <recent-fills filter-mine name="myfills" hash-title="Ring Hash" market="[[id]]"></recent-fills>
+                    <recent-fills filter-mine name="myfills" hash-type="Ring" market="[[id]]"></recent-fills>
                 </paper-card>
                 <div class="footer-spacer"></div>
                 <looper-footer></looper-footer>
