--- a/src/page-authorize.html
+++ b/src/page-authorize.html
@@ -67,7 +67,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 <div class="middle"></div>
                 <div class="right">
                   <div class="vertical layout start-justified">
-                    <iron-ajax auto url="http://127.0.0.1:8081/walletTokens.json" handle-as="json" last-response="{{data}}" debounce-duration="300"></iron-ajax>
+                    <iron-ajax auto url="https://raw.githubusercontent.com/Loopring/mock-relay-data/master/walletTokens.json" handle-as="json" last-response="{{data}}" debounce-duration="300"></iron-ajax>
                     <paper-item class="flex">
                       <paper-item-body two-line>
                         <div class="title"> Address</div>
