--- a/src/looper-page/simple-toolbar.html
+++ b/src/looper-page/simple-toolbar.html
@@ -31,7 +31,7 @@
         }
         </style>
         <app-toolbar>
-            <a href="[[backLink]]" class="styless-link">
+            <a href="#" onclick="javascript:history.back();" class="styless-link">
                 <paper-icon-button icon='arrow-back' noink></paper-icon-button>
             </a>
             <div spacer></div>
