--- a/src/wallet/subpage-unlock.html
+++ b/src/wallet/subpage-unlock.html
@@ -1,129 +1,204 @@
 <link rel="import" href="../../bower_components/polymer/polymer-element.html">
+<script src="../../libs/dist/keystore.js"></script>
 <dom-module id="subpage-unlock" fit>
     <template>
         <style is="custom-style" include="iron-flex iron-flex-alignment app-grid-style"></style>
         <style include="shared-styles">
-         :host {
-            display: block;
+            :host {
+                display: block;
 
-            --paper-card-actions: {
-                background-color: var(--paper-grey-50);
-            }
-            --paper-card-header-text: {
+                --paper-card-actions: {
+                    background-color: var(--paper-grey-50);
+                } --paper-card-header-text: {
                 font-size: 18px;
                 color: var(--app-text-color-light);
             }
-        }
+            }
 
-        .input-wrapper {
-            padding-top: 24px;
-            padding-bottom: 24px;
-        }
+            .input-wrapper {
+                padding-top: 24px;
+                padding-bottom: 24px;
+            }
 
+            .card-actions {
+                text-align: center;
+            }
 
-        .card-actions {
-            text-align: center;
-        }
+            .card-warning {
+                text-align: center;
+                height: 56px;
+                background-color: var(--paper-red-400);
+                color: white;
+            }
 
-        .card-warning {
-            text-align: center;
-            height: 56px;
-            background-color: var(--paper-red-400);
-            color: white;
-        }
+            .card-actions paper-button {
+                min-width: 360px;
+                /*margin:8px 0 8px 0;*/
+                /*color: var(--app-primary-color-dark);*/
+            }
 
-        .card-actions paper-button {
-            min-width: 360px;
-            /*margin:8px 0 8px 0;*/
-            /*color: var(--app-primary-color-dark);*/
-        }
+            .card-actions paper-button:hover {
+                color: var(--app-primary-color-dark);
+            }
 
-        .card-actions paper-button:hover {
-            color: var(--app-primary-color-dark);
-        }
+            iron-input input {
+                width: 280px;
+            }
 
-        iron-input input {
-            width: 280px;
-        }
+            paper-button[primary] {
+                min-width: 280px;
+            }
 
+            paper-button[primary] > iron-icon {
+                padding-right: 8px;
+            }
 
+            #fileInput {
+                visibility: hidden;
+            }
 
-        paper-button[primary] {
-            min-width: 280px;
-        }
+            div.visible {
+                visibility: visible;
+            }
 
-        paper-button[primary]>iron-icon {
-            padding-right: 8px;
-        }
+            div.hidden {
+                visibility: hidden;
+            }
 
-        #fileInput {
-            visibility: hidden;
-        }
+            div.top {
+                padding-top: 60px;
+            }
+
         </style>
-        <input id="fileInput" type="file" id="file-input" />
+        <input id="fileInput" type="file"/>
         <div class="sections">
             <paper-card nopadding heading="Unlock Your Wallet">
                 <div class="card-content">
                     <div class="vertical center layout ">
-                        <div secondary-text> Choose the wallet file to unlock. Your file will never be sent over the network to anyone</div>
-                        <div class="input-wrapper horizontal layout center-justified">
+                        <div secondary-text> Choose the wallet file to unlock. Your file will never be sent over the
+                            network to anyone
+                        </div>
+                        <div class="input-wrapper horizontal layout center-justified top">
                             <paper-button noink primary on-click="chooseFile" id="downloadButton">
-                                <iron-icon icon="folder-open"></iron-icon> Select Keystore File (UTC / JSON)</paper-button>
+                                <iron-icon icon="folder-open"></iron-icon>
+                                Select Keystore File (UTC / JSON)
+                            </paper-button>
                         </div>
-                        <div secondary-text>Great. Your wallet is password protected. Provide provide password:</div>
-                        <div class="input-wrapper horizontal layout center-justified">
-                            <iron-input bind-value="{{password}}" auto-validate>
-                                <input type="password">
-                            </iron-input>
+                        <div id="test">
+
+                        </div>
+                        <div class$="[[isPassWordRequiredClass(passwordRequired)]]">
+                            <div secondary-text>Great. Your wallet is password protected. Provide your password:</div>
+                            <div class="input-wrapper horizontal layout center-justified">
+                                <iron-input bind-value="{{password}}" auto-validate>
+                                    <input type="password">
+                                </iron-input>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="card-warning center">
+
+                <div class="card-warning center [[decryptErrorExistedClass(decryptError)]]">
                     <div>
+                        [[decryptError]]
                     </div>
                 </div>
-                <div class="input-wrapper horizontal layout center-justified">
+
+                <div class$="input-wrapper horizontal layout center-justified [[decryptReadyClass(walletContent,passwordRequired,password)]]">
                     <paper-button primary on-click="unlockClicked">Go ahead and unlock my wallet.</paper-button>
                 </div>
             </paper-card>
         </div>
     </template>
     <script>
-    class SubpageUnlock extends Polymer.Element {
-        static get is() { return 'subpage-unlock'; }
+        const keystore = require('keystore');
 
-        static get properties() {
-            return {
-                walletContent: String
-            };
-        }
-
-        ready() {
-            super.ready();
-            this.$.fileInput.addEventListener('change', this.readFile, false);
-        }
-
-        chooseFile() {
-            this.$.fileInput.click();
-        }
-
-        readFile(e) {
-            var file = e.target.files[0];
-            if (!file) {
-                return;
+        class SubpageUnlock extends Polymer.Element {
+            static get is() {
+                return 'subpage-unlock';
             }
-            var reader = new FileReader();
-            reader.onload = function(e) {
-                this.walletContent = e.target.result;
-                console.log("wallet content: " + this.walletContent);
-            };
-            reader.readAsText(file);
+
+            static get properties() {
+                return {
+                    walletContent: {
+                        type: String,
+                        notify: true,
+
+                    },
+                    passwordRequired: {
+                        type: Boolean,
+                        value: false,
+                        notify: true,
+                    },
+                };
+            }
+
+            static get observers() {
+                return ['isPassWordRequired(walletContent)'];
+            }
+
+            ready() {
+                super.ready();
+                this.$.fileInput.addEventListener('change', this.readFile, false);
+            }
+
+            chooseFile() {
+                this.$.fileInput.click();
+            }
+
+            readFile(e) {
+                var file = e.target.files[0];
+                if (!file) {
+                    return;
+                }
+                var reader = new FileReader();
+                var _this = this;
+                reader.onload = function (e) {
+                   _this.walletContent = e.target.result;
+                };
+                reader.readAsText(file);
+            }
+
+            isPassWordRequired(walletContent) {
+                console.log("change")
+                this.passwordRequired = !(!walletContent || !keystore.isKeystorePassRequired(walletContent));
+            }
+
+            isPassWordRequiredClass(required) {
+                return required ? 'visible' : 'hidden';
+            }
+
+            decryptErrorExistedClass(decryptError) {
+                return decryptError ? 'visible' : 'hidden';
+            }
+
+            decryptReadyClass(walletContent, passwordRequired, password) {
+
+                if (!walletContent || walletContent === '') {
+                    return 'hidden';
+                }
+
+                if (!passwordRequired) {
+                    return 'visible';
+                }
+
+                if (password) {
+                    return 'hidden';
+                }
+            }
+
+            unlockClicked() {
+                try {
+                    const privateKey = keystore.decryptKeystoreToPkey(this.walletContent, this.password);
+                    console.log(privateKey.toString('hex'));
+                } catch (e) {
+                    this.decryptError = e.message;
+                }
+            }
+
+
         }
 
-
-
-    }
-
-    window.customElements.define(SubpageUnlock.is, SubpageUnlock);
+        window.customElements.define(SubpageUnlock.is, SubpageUnlock);
     </script>
 </dom-module>
