--- a/src/page-authorize.html
+++ b/src/page-authorize.html
@@ -95,10 +95,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                         <div class="title">
                         </div>
                         <div secondary>
+                        <!--
                           <common-input value="{{val}}" validator="[[_validator]]">
-                            <input slot="lable" placeholder="my validator is valid"></input>
+                            <div slot="postfix">houzhui...</div>
                           </common-input>
                           111:[[val]]
+                          -->
+
+                          <validation-element></validation-element>
                         </div>
                       </paper-item-body>
                     </paper-item>
