--- a/src/page-authorize.html
+++ b/src/page-authorize.html
@@ -20,13 +20,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         width: 800px;
       }
       .left {
-        width:45%;
+        width: 300px;
       }
       .middle {
-        width:10%;
+        width: 50px;
       }
       .right {
-        width:45%;
+        width: 300px;
       }
       .button {
         padding-top: 20px;
@@ -48,7 +48,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <paper-card>
           <div class="horizontal layout center-justified">
             <div class="container">
-              <div class="horizontal layout flex">
+              <div class="horizontal layout center-justified">
                 <div class="left">
                   <div class="vertical layout start-justified">
                     <div class="horizontal layout start-justified">
