--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -50,6 +50,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             width: 100%;
             margin-bottom: 32px;
             padding: 32px 16px;
+
+            box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
+            0 1px 5px 0 rgba(0, 0, 0, 0.12),
+            0 3px 1px -2px rgba(0, 0, 0, 0.2);
         }
 
 
@@ -63,6 +67,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             margin-bottom: 8px;
             font-size: 1em;
             font-weight: 500;
+            box-shadow: none;
         }
 
         .footer-spacer {
@@ -189,8 +194,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             }
         }
 
-        div[part="input-field"]{
-            -moz-border-radius:0px;
+        div[part="input-field"] {
+            -moz-border-radius: 0px;
         }
         </style>
     </template>
